# calamus

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  INSTALL.md  LICENSE  LICENSE.md  Makefile  README.md  ReleaseNotes.md  calamus-color-scheme-plan.md  calamus-plan.md  docker-compose.yml  docker-entrypoint.sh  docker-mmdc-puppeteer.json  meson.build  pyproject.toml  selinux_guidance.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/copilot/skills/format/: SKILL.md
.github/workflows/: build.yml  compat.yml  format.yml  release.yml  selinux.yml  test.yml  trivy-scan.yml
build-aux/: calamus.in  meson_post_install.py
calamus/: __init__.py  __main__.py  about.py  app.py  directorytree.py  editor.py  exporter.py  formatting.py  highlight_support.py  mermaid_support.py  preferences.py  preview.py  printer.py  recentfiles.py  renderer.py  tabs.py  theme.py  window.py
calamus/resources/.mermaid-render/: diagram.mmd
calamus/resources/styles/: calamus-adwaita-dark.xml  calamus-adwaita.xml
docs/: calamus.1  selinux.md
resources/completions/bash/: calamus
resources/completions/fish/: calamus.fish
resources/completions/zsh/: _calamus
resources/desktop/: calamus.desktop
resources/flatpak/: io.github.mray271.calamus.yaml
resources/rpm/: calamus.spec
samples/: time_dilation_offsets.md
scripts/: fetch-highlight.sh  fetch-mermaid.sh  test-opensuse-local.sh
tests/: conftest.py  test_completion_sync.py  test_directorytree.py  test_editor.py  test_exporter.py  test_extramark_compat.py  test_formatting.py  test_gfm_compat.py  test_glfm_compat.py  test_init.py  test_large_file.py  test_main.py  test_mermaid_rendering.py  test_mermaid_support.py  test_pipe_and_file_args.py  test_preferences.py  test_recentfiles.py  test_renderer.py  test_selinux_compat.py  test_theme.py  test_unicode_rendering.py
tests/fixtures/: mermaid_directive.md  mermaid_math.md  xychart_mermaid.md
